--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@uiw/react-codemirror": "^4.23.12",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
