--- a/client/package.json
+++ b/client/package.json
@@ -11,20 +11,29 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.6",
-    "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-go": "^6.0.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-java": "^6.0.2",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.3.3",
+    "@codemirror/lang-php": "^6.0.2",
     "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-rust": "^6.0.2",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.37.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.14.3",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
     "@uiw/react-codemirror": "^4.23.12",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.0",
+    "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
