--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ client/.env.local
 client/.env.development.local
 client/.env.production.local
 
+# Server env
+server/.env.local
+server/.env.development.local
+server/.env.production.local
+
 # Backup or temp files
 *.swp
 *.tmp
