--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,11 @@
     "@tailwindcss/vite": "^4.1.8",
     "@uiw/react-codemirror": "^4.23.12",
     "axios": "^1.10.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.0",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
