feat: integrate Agora video call functionality
- Added agora-access-token dependency for token generation.
- Implemented token generation route in the server.
- Updated socket handling to include user UID for room joining.
- Created GlobalVideo component for managing video streams.
- Developed LocalUserVideo and RemoteUserVideo components for local and remote video rendering.
- Implemented utility function to fetch Agora token from the server.
- Enhanced UI for video call with controls for mic, video, and call end.

--- a/client/package.json
+++ b/client/package.json
@@ -30,10 +30,11 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
     "@uiw/react-codemirror": "^4.23.12",
+    "agora-rtc-sdk-ng": "^4.24.0",
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
-    "framer-motion": "^12.23.0",
+    "framer-motion": "^12.23.12",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
